--- a/file.html
+++ b/file.html
@@ -9,7 +9,7 @@ const person = {name:"sam",age:12,city:"hassan",
                           this.name = val;
                           }
                           }
-person.fname="Nagu";
+person.fname="abhi";
 document.getElementById('1').innerHTML = person.name;
 </script>
 </body>
